<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/ivFashion"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/guideline"
        android:background="@drawable/backcardview" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.48"/>

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/btnBack"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:padding="8dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:src="@drawable/ic_back_arrow"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/tvSignIn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_in"
        android:textSize="18sp"
        android:textColor="@color/white"
        android:fontFamily="@font/latoblack"
        android:layout_marginStart="45dp"
        android:layout_marginEnd="303dp"
        android:layout_marginBottom="24dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/ivFashion"/>
    
    <TextView
        android:id="@+id/tvWelcome"
        android:text="@string/welcome"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnBack"
        android:layout_marginStart="43dp"
        android:layout_marginEnd="154dp"
        android:layout_marginTop="50dp"
        android:textColor="@color/white"
        android:textSize="24sp"
        android:fontFamily="@font/latoblack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/tvTextFashion"
        android:layout_width="286dp"
        android:layout_height="60dp"
        android:textColor="@color/white"
        android:textSize="14sp"
        android:text="@string/text_onlineshop"
        android:layout_marginStart="44dp"
        android:layout_marginEnd="84dp"
        android:layout_marginTop="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvWelcome"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tvInputLayoutPhoneNumber"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginTop="32dp"
        app:startIconDrawable="@drawable/ic_envelope_simple"
        android:layout_height="wrap_content"
        app:prefixText="+998 "
        app:endIconMode="clear_text"
        android:hint="@string/phone_number"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:counterEnabled="true"
        app:counterMaxLength="9"
        app:layout_constraintTop_toBottomOf="@id/ivFashion">

        <EditText
            android:id="@+id/etPhoneNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLength="9"
            android:inputType="phone"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tvInputLayoutPassword"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginTop="20dp"
        app:startIconDrawable="@drawable/ic_lock"
        android:hint="@string/password"
        app:endIconMode="password_toggle"
        app:layout_constraintStart_toStartOf="@id/tvInputLayoutPhoneNumber"
        app:layout_constraintEnd_toEndOf="@id/tvInputLayoutPhoneNumber"
        app:layout_constraintTop_toBottomOf="@id/tvInputLayoutPhoneNumber">

        <EditText
            android:id="@+id/etPassword"
            android:inputType="textPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/btnForgotPassword"
        android:text="@string/did_you_forgot_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#6342E8"
        app:layout_constraintTop_toTopOf="@id/tvRemember"
        app:layout_constraintBottom_toBottomOf="@id/tvRemember"
        app:layout_constraintEnd_toEndOf="@id/tvInputLayoutPassword"/>


    <androidx.appcompat.widget.AppCompatCheckBox
        android:id="@+id/checkbox"
        android:layout_width="26dp"
        android:gravity="center"
        android:layout_height="21dp"
        app:layout_constraintStart_toStartOf="@id/tvInputLayoutPassword"
        app:layout_constraintTop_toBottomOf="@id/tvInputLayoutPassword"
        app:layout_constraintBottom_toTopOf="@id/btnSignIn"/>

    <TextView
        android:id="@+id/tvRemember"
        android:text="@string/remember_me"
        android:layout_width="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@id/checkbox"
        app:layout_constraintTop_toTopOf="@id/checkbox"
        app:layout_constraintBottom_toBottomOf="@id/checkbox"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnSignIn"
        android:text="@string/sign_in"
        android:layout_width="354dp"
        android:layout_height="54dp"
        android:textColor="@color/white"
        android:layout_marginBottom="17dp"
        android:background="@drawable/background_button_sign_in"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/tvHaveAcc"/>

    <TextView
        android:id="@+id/tvHaveAcc"
        android:text="@string/do_you_have_account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="12sp"
        android:textColor="#A1A1A1"
        android:layout_marginStart="105dp"
        android:layout_marginBottom="36dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <TextView
        android:id="@+id/btnCreateAcc"
        android:text="@string/create_account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="11sp"
        android:textColor="#6342E8"
        android:layout_marginBottom="36dp"
        android:layout_marginStart="7dp"
        app:layout_constraintStart_toEndOf="@id/tvHaveAcc"
        app:layout_constraintBottom_toBottomOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>