<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/splashback">

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/onlineshop"
        android:textSize="44sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:layout_marginEnd="40dp"
        android:layout_marginTop="75dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/tvDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/you_can_find_something"
        android:textSize="24sp"
        android:textStyle="bold"
        android:gravity="center"
        android:textColor="@color/black"
        android:layout_marginStart="73dp"
        android:layout_marginEnd="73dp"
        android:layout_marginTop="130dp"
        app:layout_constraintTop_toBottomOf="@id/tvTitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/tvSubtitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Для каждого клиента найдется товар"
        android:textSize="14sp"
        android:textStyle="bold"
        android:gravity="center"
        android:textColor="@color/black"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="49dp"
        android:layout_marginTop="32dp"
        app:layout_constraintTop_toBottomOf="@id/tvDescription"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnSignIn"
        android:text="@string/sign_in"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="89dp"
        android:layout_marginStart="96dp"
        android:layout_marginEnd="96dp"
        android:background="@drawable/background_button_sign_in_2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvSubtitle"/>
    
    <View
        android:layout_width="21dp"
        android:layout_height="1dp"
        android:background="#4D000000"
        android:layout_marginEnd="10dp"
        app:layout_constraintEnd_toStartOf="@id/tvOr"
        app:layout_constraintTop_toTopOf="@id/tvOr"
        app:layout_constraintBottom_toBottomOf="@id/tvOr"/>

    <TextView
        android:id="@+id/tvOr"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/or"
        android:textColor="@color/black"
        android:textSize="14sp"
        android:layout_marginTop="11dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnSignIn"/>

    <View
        android:layout_width="21dp"
        android:layout_height="1dp"
        android:background="#4D000000"
        android:layout_marginStart="10dp"
        app:layout_constraintStart_toEndOf="@id/tvOr"
        app:layout_constraintTop_toTopOf="@id/tvOr"
        app:layout_constraintBottom_toBottomOf="@id/tvOr"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnSignUp"
        android:text="@string/sign_up"
        android:textColor="@color/white"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="11dp"
        android:layout_marginStart="96dp"
        android:background="@drawable/background_button_sign_in"
        android:layout_marginEnd="96dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvOr"/>

</androidx.constraintlayout.widget.ConstraintLayout>