<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/btnBack"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:padding="8dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:src="@drawable/ic_back_black"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:clickable="true"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:focusable="true" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="32dp"
        android:id="@+id/cardBack"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf ="@id/tvTitle"
        android:src="@drawable/card_back"/>
    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/card_data"
        android:textSize="16sp"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/btnBack"
        app:layout_constraintBottom_toBottomOf="@id/btnBack"/>

    <Button
        android:layout_width="354dp"
        android:id="@+id/btnSave"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_margin="16dp"
        android:gravity="center"
        android:textSize="14sp"
        android:text="@string/save"
        android:background="@drawable/background_button_sign_in"
        android:layout_height="54dp"/>

    <TextView
        android:id="@+id/tvNameOfCard"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/name_of_card"
        android:textSize="16sp"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="32dp"
        android:layout_marginStart="32dp"
        app:layout_constraintTop_toBottomOf="@id/cardBack"/>

    <EditText
        android:layout_width="0dp"
        android:id="@+id/etNameOfCard"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="32dp"
        android:gravity="center_vertical|start"
        android:layout_marginTop="10dp"
        android:hint="Фамилия имя отчество"
        android:textSize="14dp"
        android:padding="12dp"
        android:background="@drawable/background_edit_text_search"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@id/tvNameOfCard"
        app:layout_constraintTop_toBottomOf="@id/tvNameOfCard" />

    <TextView
        android:id="@+id/tvCardNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/card_number"
        android:textSize="16sp"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="16dp"
        android:layout_marginStart="32dp"
        app:layout_constraintTop_toBottomOf="@id/etNameOfCard"/>

    <EditText
        android:layout_width="0dp"
        android:id="@+id/etCardNumber"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="32dp"
        android:gravity="center_vertical|start"
        android:drawableEnd="@drawable/ic_card_icon"
        android:layout_marginTop="10dp"
        android:hint="4747 4747 4747 4747"
        android:textSize="14dp"
        android:padding="12dp"
        android:background="@drawable/background_edit_text_search"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@id/tvNameOfCard"
        app:layout_constraintTop_toBottomOf="@id/tvCardNumber" />

    <TextView
        android:id="@+id/tvShelfLife"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/shelf_life"
        android:textSize="16sp"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="16dp"
        android:layout_marginStart="32dp"
        app:layout_constraintTop_toBottomOf="@id/etCardNumber"/>

    <EditText
        android:layout_width="120dp"
        android:id="@+id/etShelfLife"
        android:layout_marginEnd="32dp"
        android:gravity="center_vertical|start"
        android:layout_marginTop="10dp"
        android:hint="07/21"
        android:textSize="14dp"
        android:padding="12dp"
        android:background="@drawable/background_edit_text_search"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@id/tvNameOfCard"
        app:layout_constraintTop_toBottomOf="@id/tvShelfLife" />


</androidx.constraintlayout.widget.ConstraintLayout>